# rust-image-optimizer

./: .gitignore  Cargo.toml  README.md  build.sh  serve.sh
src/: lib.rs
web/: index.html  worker.js
