[package]
name = "image_optimizer"
version = "0.1.0"
edition = "2021"
description = "WASM-based image optimizer for JPEG and PNG files"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
jpeg-encoder = "0.6"
png = "0.18"
color_quant = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
